// Vitest Snapshot v1

exports[`index > diff > delta 1`] = `
[
  [
    0,
    "
import { describe, expect, it } from 'vitest'
",
  ],
  [
    -1,
    "import {ll} from './one'

",
  ],
  [
    0,
    "
describe('should', () => {
  it('exported', () => {
    expect(33)",
  ],
  [
    -1,
    "
    console.log('hello'",
  ],
  [
    1,
    ".toEqual(1",
  ],
  [
    0,
    ")
  })
})
",
  ],
]
`;

exports[`index > diff > output 1`] = `
"
import { describe, expect, it } from 'vitest'

describe('should', () => {
  it('exported', () => {
    expect(33).toEqual(1)
  })
})
"
`;

exports[`index > diff > patches 1`] = `
[
  {
    "cursor": 47,
    "length": 26,
    "type": "removal",
  },
  {
    "cursor": 114,
    "length": 24,
    "type": "removal",
  },
  {
    "content": ".toEqual(1",
    "cursor": 114,
    "type": "insert",
  },
]
`;
